Fix loading APC/APCu

--- a/templates/etc/php5/mods-available/apcu.ini.j2
+++ b/templates/etc/php5/mods-available/apcu.ini.j2
@@ -2,7 +2,7 @@
 ; {{ ansible_managed }}
 ;
 
-extension=apc.so
+extension={{ php_apc_package }}.so
 
 ; apc.enabled can be set to 0 to disable APC
 apc.enable={{ php_apc_enable }}
