--- a/templates/etc/php5/fpm/pool.d/pool.conf.j2
+++ b/templates/etc/php5/fpm/pool.d/pool.conf.j2
@@ -46,8 +46,8 @@ listen = {{ item.listen }}
 ; BSD-derived systems allow connections regardless of permissions.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-listen.owner = {{ item.listen_ | default('www-data') }}
-listen.group = {{ item.listen_ | default('www-data') }}
+listen.owner = {{ item.listen_owner | default('www-data') }}
+listen.group = {{ item.listen_owner | default('www-data') }}
 ;listen.mode = 0660
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
