--- a/templates/etc/__php__/mods-available/apcu.ini.j2
+++ b/templates/etc/__php__/mods-available/apcu.ini.j2
@@ -2,7 +2,7 @@
 ; {{ ansible_managed }}
 ;
 
-extension={{ php_apc_package }}.so
+extension=apcu.so
 
 ; apc.enabled can be set to 0 to disable APC
 apc.enable={{ php_apc_enable }}
