--- a/templates/etc/__php__/fpm/pool.d/pool.conf.j2
+++ b/templates/etc/__php__/fpm/pool.d/pool.conf.j2
@@ -231,7 +231,11 @@ pm.max_spare_servers = {{ item.pm_max_spare_servers }}
 ;       anything, but it may not be a good idea to use the .php extension or it
 ;       may conflict with a real PHP file.
 ; Default Value: not set
-;pm.status_path = /status
+{% if item.status_path is defined %}
+pm.status_path = {{ item.status_path }}
+{% else %}
+;pm.status.path = /status
+{% endif %}
 
 ; The ping URI to call the monitoring page of FPM. If this value is not set, no
 ; URI will be recognized as a ping page. This could be used to test from outside
@@ -243,12 +247,20 @@ pm.max_spare_servers = {{ item.pm_max_spare_servers }}
 ;       anything, but it may not be a good idea to use the .php extension or it
 ;       may conflict with a real PHP file.
 ; Default Value: not set
+{% if item.ping_path is defined %}
+ping.path = {{ item.ping_path }}
+{% else %}
 ;ping.path = /ping
+{% endif %}
 
 ; This directive may be used to customize the response of a ping request. The
 ; response is formatted as text/plain with a 200 response code.
 ; Default Value: pong
+{% if item.ping_response is defined %}
+ping.response = {{ item.ping_response }}
+{% else %}
 ;ping.response = pong
+{% endif %}
 
 ; The access log file
 ; Default: not set
