--- a/templates/etc/__php__/fpm/pool.d/pool.conf.j2
+++ b/templates/etc/__php__/fpm/pool.d/pool.conf.j2
@@ -421,5 +421,12 @@ chdir = /
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
-
+{% if item.php_flag is defined %}
+{% for k, v in item.php_flag.items() %}
+{% endfor %}
+{% endif %}
+{% if item.php_admin_flag is defined %}
+{% for k, v in item.php_admin_flag.items() %}
+{% endfor %}
+{% endif %}
 ; vim:filetype=dosini
