--- a/tests/templates/nginx.conf.j2
+++ b/tests/templates/nginx.conf.j2
@@ -2,7 +2,7 @@ events {
     worker_connections  1024;
 }
 
-user {{ php_default_user_group }};
+user root;
 
 http {
     include       mime.types;
